syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/pb";

message CardInfo {
  string number = 1;
  int32 cvv = 2;
  int32 expirationYear = 3;
  int32 expirationMonth = 4;
}
